feat: use native paper adventure api [BREAKING]
- plugin now requires paper server
- only supports 1.18.2+